--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app/index.js",
   "repository": "https://github.com/krahman/band-angular.git",
   "scripts": {
+    "test": "NODE_ENV=test karma start",
     "start": "node node_modules/.bin/webpack-dev-server --content-base app",
     "build": "NODE_ENV=production node node_modules/.bin/webpack && cp app/index.html dist/index.html"
   },
@@ -20,6 +21,11 @@
     "file-loader": "^0.8.1",
     "jshint": "^2.9.1-rc2",
     "jshint-loader": "^0.8.3",
+    "karma": "^0.13.16",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.1",
+    "karma-webpack": "^1.5.0",
     "nib": "^1.1.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.0",
