--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "angular-formly": "^7.3.9",
     "angular-mocks": "^1.6.5",
+    "angular-ui-router": "^0.2.18",
     "api-check": "^7.5.5",
     "babel": "^6.3.26",
     "babel-core": "^6.3.26",
@@ -44,6 +45,6 @@
     "angular-aria": "^1.5.0-rc.0",
     "angular-material": "^1.0.1",
     "angular-messages": "^1.5.0-rc.0",
-    "angular-ui-router": "^0.2.13"
+    "angular-ui-router": "^0.2.18"
   }
 }
