--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
-    "angular": "^1.5.0-rc.0",
+    "angular": "1.6.5",
     "angular-animate": "^1.5.0-rc.0",
     "angular-aria": "^1.5.0-rc.0",
     "angular-material": "^1.0.1",
     "angular-messages": "^1.5.0-rc.0",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^1.0.2"
   }
 }
